# qt-rpg

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  librusty_code.d  sonar-project.properties  test.properties
.github/workflows/: build.yml
app/: CMakeLists.txt
app/core/: CMakeLists.txt
app/core/include/: Application.h  Parameters.hpp  Stylizer.h  StylizerTheme.h  attack.h  bossclass.h  bosses.h  character.h  common.h  effect.h  fightsoundlog.h  gamemanager.h  heroes.h  playersmanager.h  statsendgame.h  statsingame.h  stuff.h  utils.h
app/core/src/: Application.cpp  Parameters.cpp  Stylizer.cpp  StylizerTheme.cpp  attack.cpp  bossclass.cpp  bosses.cpp  character.cpp  effect.cpp  fightsoundlog.cpp  gamemanager.cpp  heroes.cpp  main.cpp  playersmanager.cpp  statsendgame.cpp  statsingame.cpp  stuff.cpp  utils.cpp
app/core_tests/: CMakeLists.txt  main.cpp  tst_characters.cpp  tst_core_tests.cpp  tst_game_manager.cpp  tst_players_manager.cpp  tst_utils.cpp
app/core_tests/classes/: CMakeLists.txt  attak.cpp  character_fixtures.cpp
app/core_tests/src/: CMakeLists.txt  tst_character.cpp  tst_utils.cpp
app/view/: CMakeLists.txt
app/view/forms/: actionsview.ui  alleffectpanel.ui  attakview.ui  bossesview.ui  bosspanel.ui  channel.ui  characterwindow.ui  dotview.ui  editatkpanel.ui  editattakview.ui  editcharacter.ui  editstatpanel.ui  effectview.ui  equipmentview.ui  equipmentview.ui.autosave  equiponbodypanel.ui  equiponbodyview.ui  gamecharacters.ui  gamedisplay.ui  heroesview.ui  heropanel.ui  hostpage.ui  imgcharacterview.ui  loadgame.ui  mainwindow.ui  statsview.ui  stuffpanel.ui  stuffsview.ui
app/view/include/: ApplicationView.h  CompButtons.h  actionsview.h  alleffectpanel.h  attakview.h  bossesview.h  bosspanel.h  channel.h  character.h  characterwindow.h  common.h  complabel.h  dotview.h  editatkpanel.h  editattakview.h  editcharacter.h  editstatpanel.h  effectview.h  equipmentview.h  equiponbodypanel.h  equiponbodyview.h  gamecharacters.h  gamedisplay.h  heroesview.h  heropanel.h  hostpage.h  imgcharacterview.h  loadgame.h  mainwindow.h  statsview.h  stuffpanel.h  stuffsview.h
app/view/src/: ApplicationView.cpp  CompButtons.cpp  actionsview.cpp  alleffectpanel.cpp  attakview.cpp  bossesview.cpp  bosspanel.cpp  channel.cpp  character.cpp  characterwindow.cpp  complabel.cpp  dotview.cpp  editatkpanel.cpp  editattakview.cpp  editcharacter.cpp  editstatpanel.cpp  effectview.cpp  equipmentview.cpp  equiponbodypanel.cpp  equiponbodyview.cpp  gamecharacters.cpp  gamedisplay.cpp  heroesview.cpp  heropanel.cpp  hostpage.cpp  imgcharacterview.cpp  loadgame.cpp  mainwindow.cpp  statsview.cpp  stuff.cpp  stuffpanel.cpp  stuffsview.cpp
docs/: LOTR.xlsx  attaque.docx  bonus.txt  random-bosses.xlsx
docs/Carcaroth/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  4.json  5.json  6.json  7.json  8.json  9.json
offlines/Personnages/: Angmar le retour.json  Angmar.json  Angmar10PV.json  Azrak Ombresang.json  Balorim le trouble.json  Beorn.json  Carcaroth.json  Dragcor le precis.json  Elara la guerisseuse de la Lorien.json  Gobenain-0.json  Gobenain-1.json  Gobenain-2.json  Gobenain-3.json  Gobenain-4.json  Gobenain-5.json  Gwaihir le Noir.json  Khamul.json  La bouche du Mordor.json  Lawrence Stroll, le roi de pétrole.json  Lirion Vertefeuille.json  Malachar le vif.json  Miriel.json  Naroth l'arabe.json  Nazgul-0.json  Nazgul-1.json  Nazgul-2.json  Nazgul-3.json  Nazgul-4.json  Ragnor.json  Saroumane.json  Test.json  Thalia.json  Tharandor le puissant.json  Thraïn.json  Trollaid.json  Varagul le doux.json  Vouragor le robuste.json  pTroll.json  sTroll .json
offlines/attak/Angmar/: Dans ta soeur.json  Haki des pauvres.json  Le cassage de couilles.json  Marc la petite Tortue.json  caca culotte.json  chupa chups.json  fais un bisou à mémé.json  l'anus de sauron.json  suce moi ma poule.json  suceeeee.json
offlines/attak/Angmar le retour/: Coup de corne.json  Crachat volcanique.json  Fouet de Morgoth.json  Tremblement terrestre.json
offlines/attak/Araignée geante/: Assaut de l'ombre.json  Filet de toile.json  Morsure venimeuse.json
offlines/attak/Azrak Ombresang/: Briseur d'Égide.json  Chaînes de la Rage.json  Flèche de la Montagne du Destin.json  Fléau Sylvestre.json  Fracas des Abysses.json  Furie du Mordor.json  Lame Fusionnelle.json  Lame de Morgul.json  Malédiction d'Angmar.json  Malédiction de Morgul.json  Récupération Mordorienne.json  Sculpture Élémentaire .json  Éclipse du Mordor.json
offlines/attak/Balorim le trouble/: Aahhhhh.json  Fiouuuuuu.json
offlines/attak/Balrog/: Coup de corne.json  Crachat volcanique.json  Fouet de Morgoth.json  Tremblement terrestre.json
offlines/attak/Beorn/: Brulure du feu sacré.json  Brulure du feu sacré.txt  Eclipse de Fangorn.json  Eclipse de Fangorn.txt  Ecorce-fer.json  Ecorce-fer.txt  Evisceration bestiale.json  Evisceration bestiale.txt  Fracas des terres sauvages.json  Fracas des terres sauvages.txt  Fulgurance sylvestre.json  Fulgurance sylvestre.txt  Rugissement des monts brumeux.json  Rugissement des monts brumeux.txt  Seraphin de la terre sauvage.json  Seraphin de la terre sauvage.txt  Souffle de la Lorien.json  Souffle de la Lorien.txt
offlines/attak/Carcaroth/: 10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  4.json  5.json  6.json  7.json  8.json  9.json
offlines/attak/Chef des Gobelains/: baffe.json  coup de tête.json  frappe succinte .json  kick boxing.json  mange oreille.json
offlines/attak/Dragcor le précis/: C'est chaud ça brûle.json  Dans ton cul.json  Fiouuuuuu.json
offlines/attak/Gobenain-0/: Taillade.json
resources/: attak.qrc  resource.qrc
rusty_code/: Cargo.toml
rusty_code/src/: lib.rs
scripts/: build_linux.sh  deploy-release.sh
(+1094 files in other folders)
